--- a/tgui/packages/tgui/package.json
+++ b/tgui/packages/tgui/package.json
@@ -1,20 +1,21 @@
 {
 	"private": true,
 	"name": "tgui",
-	"version": "4.4.0",
+	"version": "5.0.0",
 	"dependencies": {
 		"@popperjs/core": "^2.11.8",
 		"@types/marked": "^4.0.8",
+		"@types/react": "^18.2.39",
+		"@types/react-dom": "^18.2.17",
 		"common": "workspace:*",
 		"csstype": "^3.1.1",
 		"dateformat": "^4.6.2",
 		"dompurify": "^2.4.4",
 		"highlight.js": "^11.9.0",
-		"inferno": "^8.2.1",
-		"inferno-compat": "^8.2.1",
-		"inferno-vnode-flags": "^8.2.1",
 		"js-yaml": "^4.1.0",
 		"marked": "^4.2.12",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"tgui-dev-server": "workspace:*",
 		"tgui-polyfill": "workspace:*"
 	}
