--- a/tgui/packages/tgui-panel/package.json
+++ b/tgui/packages/tgui-panel/package.json
@@ -6,7 +6,8 @@
 		"@types/node": "^14.x",
 		"common": "workspace:*",
 		"dompurify": "^2.4.4",
-		"inferno": "^8.2.1",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
 		"tgui": "workspace:*",
 		"tgui-dev-server": "workspace:*",
 		"tgui-polyfill": "workspace:*"
