--- a/tgui/package.json
+++ b/tgui/package.json
@@ -30,6 +30,8 @@
 		"@types/jest": "^29.5.10",
 		"@types/jsdom": "^21.1.6",
 		"@types/node": "^14.x",
+		"@types/react": "^19.1.5",
+		"@types/react-dom": "^19.1.5",
 		"@types/webpack": "^5.28.5",
 		"@types/webpack-env": "^1.18.4",
 		"@types/wicg-file-system-access": "^2023.10.5",
