--- a/tgui/packages/tgui-say/package.json
+++ b/tgui/packages/tgui-say/package.json
@@ -3,9 +3,9 @@
 	"name": "tgui-say",
 	"version": "1.0.0",
 	"dependencies": {
-		"@types/react": "^18.2.39",
 		"common": "workspace:*",
-		"react": "^18.2.0",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
 		"tgui": "workspace:*",
 		"tgui-polyfill": "workspace:*"
 	}
