--- a/tgui/packages/tgui/package.json
+++ b/tgui/packages/tgui/package.json
@@ -14,6 +14,7 @@
 		"marked": "^4.2.12",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
+		"react-popper": "^2.3.0",
 		"tgui-dev-server": "workspace:*",
 		"tgui-polyfill": "workspace:*"
 	}
