--- a/tgui/package.json
+++ b/tgui/package.json
@@ -27,6 +27,8 @@
 		"@babel/preset-env": "^7.23.3",
 		"@babel/preset-react": "^7.23.3",
 		"@babel/preset-typescript": "^7.23.3",
+		"@floating-ui/react": "^0.27.5",
+		"@popperjs/core": "^2.11.8",
 		"@types/jest": "^29.5.10",
 		"@types/jsdom": "^21.1.6",
 		"@types/node": "^14.x",
