--- a/tgui/packages/tgui/package.json
+++ b/tgui/packages/tgui/package.json
@@ -3,6 +3,7 @@
 	"name": "tgui",
 	"version": "5.0.0",
 	"dependencies": {
+		"@floating-ui/react": "^0.27.5",
 		"@popperjs/core": "^2.11.8",
 		"@types/marked": "^4.0.8",
 		"common": "workspace:*",
