--- a/tgui/package.json
+++ b/tgui/package.json
@@ -11,9 +11,9 @@
 		"tgui:bench": "webpack --env TGUI_BENCH=1 && node packages/tgui-bench/index.js",
 		"tgui:build": "BROWSERSLIST_IGNORE_OLD_DATA=true webpack",
 		"tgui:dev": "node --experimental-modules packages/tgui-dev-server/index.js",
-		"tgui:lint": "eslint packages --ext .js,.cjs,.ts,.tsx",
+		"tgui:lint": "eslint packages --ext .js,.cjs,.ts,.jsx,.tsx",
 		"tgui:prettier": "prettier --check .",
-		"tgui:sonar": "eslint packages --ext .js,.cjs,.ts,.tsx -c .eslintrc-sonar.yml",
+		"tgui:sonar": "eslint packages --ext .js,.cjs,.ts,.jsx,.tsx -c .eslintrc-sonar.yml",
 		"tgui:test": "jest --watch",
 		"tgui:test-simple": "CI=true jest --color",
 		"tgui:test-ci": "CI=true jest --color --collect-coverage",
@@ -27,7 +27,7 @@
 		"@babel/preset-env": "^7.23.3",
 		"@babel/preset-react": "^7.23.3",
 		"@babel/preset-typescript": "^7.23.3",
-		"@floating-ui/react": "^0.27.5",
+		"@floating-ui/react": "^0.27.16",
 		"@types/jest": "^29.5.10",
 		"@types/jsdom": "^21.1.6",
 		"@types/node": "^14.x",
@@ -55,6 +55,8 @@
 		"jsdom": "^22.1.0",
 		"mini-css-extract-plugin": "^2.7.6",
 		"prettier": "^3.1.0",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
 		"sass": "^1.69.5",
 		"sass-loader": "^13.3.2",
 		"style-loader": "^3.3.3",
