--- a/tgui/packages/tgui/package.json
+++ b/tgui/packages/tgui/package.json
@@ -3,8 +3,10 @@
 	"name": "tgui",
 	"version": "5.0.0",
 	"dependencies": {
-		"@floating-ui/react": "^0.27.5",
+		"@floating-ui/react": "^0.27.16",
 		"@types/marked": "^4.0.8",
+		"@types/react": "^19.1.5",
+		"@types/react-dom": "^19.1.5",
 		"common": "workspace:*",
 		"csstype": "^3.1.1",
 		"dateformat": "^4.6.2",
