--- a/tgui/package.json
+++ b/tgui/package.json
@@ -22,6 +22,7 @@
 		"@types/react-dom": "^19.1.5",
 		"@types/webpack-env": "^1.18.8",
 		"@types/wicg-file-system-access": "^2023.10.6",
+		"es-toolkit": "^1.42.0",
 		"css-loader": "^7.1.2",
 		"sass-embedded": "^1.89.2",
 		"sass-loader": "^16.0.5",
